forget put the paragraph

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,10 @@
     <title>My first Portifolio</title>
 </head>
 <body>
+    <p>About Me</p>
+    <p>Prjects</p>
+    <p>Contacts</p>
+    <p>Info</p>
     <h1>My Portofolio</h1>
     <h2>About me</h2>
     <h3>Projects</h3>
