--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,5 +15,6 @@
     <h3>Projects</h3>
 
     <a href="image"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
+    <a href="tweets.html"> twitter-link</a>
 </body>
 </html>
