orginzing the webiste

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,15 +6,29 @@
     <title>My first Portifolio</title>
 </head>
 <body>
-    <p>About Me</p>
-    <p>Prjects</p>
-    <p>Contacts</p>
-    <p>Info</p>
-    <h1>My Portofolio</h1>
-    <h2>About me</h2>
-    <h3>Projects</h3>
-
-    <a href="image"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
-    <a href="tweets.html"> twitter-link</a>
+    <header>
+        <ul>
+            <li>About Me</li>
+            <li>Contact</li>
+            <li>Projects</li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <p>About Me</p>
+            <p>Prjects</p>
+            <p>Contacts</p>
+            <p>Info</p>
+            <h1>My Portofolio</h1>
+            <h2>About me</h2>
+            <h3>Projects</h3>
+            <a href="image"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
+            <a href="tweets.html"> twitter-link</a>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>Made by Henry - <a href="<ANY LINK>" target="_blank">here</a></footer>
 </body>
 </html>
