--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,6 +6,29 @@
     <title>My first Portifolio</title>
 </head>
 <body>
-    <a href="twitter-link"><blockquote class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <header>
+        <ul>
+            <li>About Me</li>
+            <li>Contact</li>
+            <li>Projects</li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <p>About Me</p>
+            <p>Prjects</p>
+            <p>Contacts</p>
+            <p>Info</p>
+            <h1>My Portofolio</h1>
+            <h2>About me</h2>
+            <h3>Projects</h3>
+            <a href="image"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
+             <a href="twitter-link"><blockquote class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>Made by Henry - <a href="<ANY LINK>" target="_blank">here</a></footer>
 </body>
 </html>
