--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -24,6 +24,43 @@
             <h3>Projects</h3>
             <a href="image"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
             <a href="tweets.html"> twitter-link</a>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Nane</th>
+                            <th>Age</th>
+                            <th>Country</th>
+                        </tr>
+                    </thead>
+                   
+
+                    <tbody>
+                        <tr>
+                            <th>John</th>
+                            <th>25</th>
+                            <th>USA</th>
+                        </tr>
+
+                        <tr>
+                            <th>Emily</th>
+                            <th>28</th>
+                            <th>Canada</th>
+                         </tr> 
+
+                        <tr>
+                            <th>Michael</th>
+                            <th>32</th>
+                            <th>Australia</th>
+                        </tr> 
+
+                         <tr>
+                            <th>Michael</th>
+                            <th>32</th>
+                            <th>Australia</th>
+                        </tr> 
+                    </tbody>
+                </table>
+            </thead>
         </article>
         <aside>
             <p>placeholder to add comment thread later</p>
