--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,21 +7,26 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li>About Me</li>
-            <li>Contact</li>
-            <li>Projects</li>
-        </ul>
+        <Nav>
+            <ul>
+                <li>About Me</li>
+                <li>Contact</li>
+                <li>Projects</li>
+            </ul>
+        </Nav>
     </header>
     <main>
         <article>
-            <p>About Me</p>
-            <p>Prjects</p>
-            <p>Contacts</p>
+            <h2 id="about">About Me</h2>
+            <p>This is Henry and I like coding and playing video games and watching movie & anime</p>
+            <h4>id="contact">Contact</h4>
+            <p>Email: Jimmy.johnson.incall@gmail</p>
             <p>Info</p>
-            <h1>My Portofolio</h1>
-            <h2>About me</h2>
-            <h3>Projects</h3>
+            <h1 id="introduction">My Portofolio</h1>
+            <h2>Introduction</h2>
+            <p>My name is Henry and creating my fist Portofolio webiste</p>
+            <h3 id="projects">Projects</h3>
+            <p>The project I have do so far</p>
             <a href="image"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt=""></a>
             <a href="tweets.html"> twitter-link</a>
                 <table>
@@ -66,6 +71,8 @@
             <p>placeholder to add comment thread later</p>
         </aside>
     </main>
-    <footer>Made by Henry - <a href="<ANY LINK>" target="_blank">here</a></footer>
+    <footer>
+        <p>Made by Henry | Copyright © 2025 My Website</p>
+    </footer>
 </body>
 </html>
