correct project to projects

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,8 +24,8 @@
         <h2 id="">Introduction</h2>
         <p>My name is Henry, and I have a strong passion for coding.</p>
     </section>
-    <section id="project">
-         <h3 id="projects">
+    <section id="projects">
+         <h3>
             My projects
         </h3>
         <p>I enjoy building projects that help me improve my skills and explore new ideas. Each project I work on teaches me something new — whether it’s understanding HTML structure, styling with CSS, adding interactivity with JavaScript, or organizing everything on GitHub.</p>
