--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -44,7 +44,7 @@
     
     <article></article>
     <footer>
-         <p>Made by Henry | Copyright © 2025 My Website</p>
+         <p>&copy; Made by Henry | Copyright © 2025 My Website</p>
     </footer>
 </body>
 </html>
